--- a/templates/grr_room/_form.html.twig
+++ b/templates/grr_room/_form.html.twig
@@ -1,4 +1,64 @@
+<h4 class="text-success">Informations</h4>
+<hr/>
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+<div class="row">
+    <div class="col-6">
+        {{ form_row(form.roomName) }}
+        {{ form_row(form.capacity) }}
+        {{ form_row(form.statutRoom) }}
+        {{ form_row(form.pictureRoom) }}
+        {{ form_row(form.orderDisplay) }}
+    </div>
+    <div class="col-6">
+        {{ form_row(form.description) }}
+        {{ form_row(form.showComment) }}
+        {{ form_row(form.commentRoom) }}
+        {{ form_row(form.showFicRoom) }}
+        {{ form_row(form.whoCanSee) }}
+    </div>
+</div>
+
+<h4 class="text-success">Configuration des fonctionnalités</h4>
+<hr/>
+<div class="row">
+    <div class="col-6">
+        {{ form_row(form.allowActionInPast) }}
+        {{ form_row(form.moderate) }}
+        {{ form_row(form.dontAllowModify) }}
+    </div>
+    <div class="col-6">
+        {{ form_row(form.quiPeutReserverPour) }}
+        {{ form_row(form.typeAffichageReser) }}
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        {{ form_row(form.delaisOptionReservation) }}
+    </div>
+    <div class="col-6">
+        {{ form_row(form.maxBooking) }}
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+
+        {{ form_row(form.delaisMaxResaRoom) }}
+    </div>
+    <div class="col-6">
+        {{ form_row(form.delaisMinResaRoom) }}
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+    </div>
+    <div class="col-6">
+        {{ form_row(form.activeRessourceEmpruntee) }}
+    </div>
+</div>
+
+<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
