--- a/templates/grr_room/_form.html.twig
+++ b/templates/grr_room/_form.html.twig
@@ -35,30 +35,21 @@
 
 <div class="row">
     <div class="col-6">
+        {{ form_row(form.maxBooking) }}
+    </div>
+    <div class="col-6">
+        {{ form_row(form.delaisMaxResaRoom) }}
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
         {{ form_row(form.delaisOptionReservation) }}
     </div>
     <div class="col-6">
-        {{ form_row(form.maxBooking) }}
+        {{ form_row(form.delaisMinResaRoom) }}{{ form_row(form.activeRessourceEmpruntee) }}
     </div>
 </div>
 
-<div class="row">
-    <div class="col-6">
-
-        {{ form_row(form.delaisMaxResaRoom) }}
-    </div>
-    <div class="col-6">
-        {{ form_row(form.delaisMinResaRoom) }}
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-6">
-    </div>
-    <div class="col-6">
-        {{ form_row(form.activeRessourceEmpruntee) }}
-    </div>
-</div>
-
-<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+<button class="btn btn-primary">{{ button_label|default('Save') | trans }}</button>
 {{ form_end(form) }}
