--- a/templates/grr_room/_form.html.twig
+++ b/templates/grr_room/_form.html.twig
@@ -1,4 +1,4 @@
-<h4 class="text-success">Informations</h4>
+<h4 class="text-success">{{ 'room.informations.title'|trans({}, 'actions') }}</h4>
 <hr/>
 {{ form_start(form) }}
 
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<h4 class="text-success">Configuration des fonctionnalités</h4>
+<h4 class="text-success">{{ 'room.fonctions.title'|trans({}, 'actions') }}</h4>
 <hr/>
 <div class="row">
     <div class="col-6">
