--- a/templates/grr_area/index.html.twig
+++ b/templates/grr_area/index.html.twig
@@ -1,17 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'GrrArea index'|trans({}, 'actions') }}{% endblock %}
+{% block title %}{{ 'area.index.title'|trans({}, 'actions') }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'GrrArea index'|trans({}, 'actions') }}</h1>
+    <h1>{{ 'area.index.title'|trans({}, 'actions') }}</h1>
+
+    <a class="btn btn-primary" href="{{ path('grr_area_new') }}">{{ 'area.new.title'| trans({}, 'actions') }}</a>
 
     <table class="table table-bordered">
         <thead>
         <tr>
-            <th>AreaName</th>
-            <th>OrderDisplay</th>
-            <th>MorningstartsArea</th>
-            <th>EveningendsArea</th>
+            <th>{{ 'name'| trans }}</th>
+            <th>{{ 'area.form.orderDisplay.label'| trans }}</th>
+            <th>{{ 'area.form.morningstartsArea.label'| trans }}</th>
+            <th>{{ 'area.form.eveningendsArea.label'| trans }}</th>
+            <th>{{ 'area.rooms.title'| trans }}</th>
         </tr>
         </thead>
         <tbody>
@@ -23,14 +26,14 @@
                 <td>{{ grr_area.orderDisplay }}</td>
                 <td>{{ grr_area.morningstartsArea }}</td>
                 <td>{{ grr_area.eveningendsArea }}</td>
+                <td></td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">{{ 'no records found'| trans({}, 'actions') }}</td>
+                <td colspan="4">{{ 'records.notfound'| trans({}, 'actions') }}</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('grr_area_new') }}">{{ 'Create new'| trans({}, 'actions') }}</a>
 {% endblock %}
