--- a/templates/grr_room/_delete_form.html.twig
+++ b/templates/grr_room/_delete_form.html.twig
@@ -1,5 +1,26 @@
-<form method="post" action="{{ path('grr_room_delete', {'id': grr_room.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ grr_room.id) }}">
-    <button class="btn">Delete</button>
-</form>
+
+<!-- Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">{{ 'modal.delete.title'|trans({}, 'actions') }}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {{ 'room.delete.confirm'|trans({'name':grr_room.roomName}, 'actions') }}
+            </div>
+            <div class="modal-footer">
+                <form method="post" action="{{ path('grr_room_delete', {'id': grr_room.id}) }}">
+                    <input type="hidden" name="_method" value="DELETE">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ grr_room.id) }}">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ 'form.btn.cancel'|trans({}, 'actions') }}</button>
+                    <button type="button" class="btn btn-primary">{{ 'form.btn.delete'|trans({}, 'actions') }}</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
