--- a/templates/grr_room/show.html.twig
+++ b/templates/grr_room/show.html.twig
@@ -14,19 +14,31 @@
             <td>{{ grr_room.description }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.capacity.label'|trans }}</th>
+            <th>
+                {{ 'room.form.capacity.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.capacity.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.capacity }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.maxBooking.label'|trans }}</th>
+            <th>
+                {{ 'room.form.maxBooking.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.maxBooking.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.maxBooking }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.statutRoom.label'|trans }}</th>
+            <th>
+                {{ 'room.form.statutRoom.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.statutRoom.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.statutRoom }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.showFicRoom.label'|trans }}</th>
+            <th>
+                {{ 'room.form.showFicRoom.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.showFicRoom.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.showFicRoom }}</td>
         </tr>
         <tr>
@@ -50,7 +62,10 @@
             <td>{{ grr_room.delaisMinResaRoom }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.allowActionInPast.label'|trans }}</th>
+            <th>
+                {{ 'room.form.allowActionInPast.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.allowActionInPast.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.allowActionInPast }}</td>
         </tr>
         <tr>
@@ -58,23 +73,38 @@
             <td>{{ grr_room.orderDisplay }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.delaisOptionReservation.label'|trans }}</th>
+            <th>
+                {{ 'room.form.delaisOptionReservation.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.delaisOptionReservation.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.delaisOptionReservation }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.dontAllowModify.label'|trans }}</th>
+            <th>
+                {{ 'room.form.dontAllowModify.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.dontAllowModify.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.dontAllowModify }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.typeAffichageReser.label'|trans }}</th>
+            <th>
+                {{ 'room.form.typeAffichageReser.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.typeAffichageReser.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.typeAffichageReser }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.moderate.label'|trans }}</th>
-            <td>{{ grr_room.moderate ? 'Yes' : 'No' }}</td>
+            <th>
+                {{ 'room.form.moderate.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.moderate.help'|trans }}</span>
+            </th>
+            <td>{{ grr_room.moderate }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.quiPeutReserverPour.label'|trans }}</th>
+            <th>
+                {{ 'room.form.quiPeutReserverPour.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.quiPeutReserverPour.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.quiPeutReserverPour }}</td>
         </tr>
         <tr>
@@ -82,7 +112,10 @@
             <td>{{ grr_room.activeRessourceEmpruntee }}</td>
         </tr>
         <tr>
-            <th>{{ 'room.form.whoCanSee.label'|trans }}</th>
+            <th>
+                {{ 'room.form.whoCanSee.label'|trans }}<br/>
+                <span class="text-muted">{{ 'room.form.whoCanSee.help'|trans }}</span>
+            </th>
             <td>{{ grr_room.whoCanSee }}</td>
         </tr>
         </tbody>
