--- a/templates/_menu.html.twig
+++ b/templates/_menu.html.twig
@@ -10,19 +10,24 @@
             <li class="nav-item active">
                 <a class="nav-link" href="{{ path('grr_home') }}">Home <span class="sr-only">(current)</span></a>
             </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('grr_setting_index') }}">{{ 'menu.settings'|trans({}, 'actions') }}</a>
+            </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('grr_area_index') }}">{{ 'menu.area'|trans({}, 'actions') }}</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('grr_entry_index') }}">{{ 'menu.entries'|trans({}, 'actions') }}</a>
             </li>
+             <li class="nav-item">
+                <a class="nav-link" href="{{ path('grr_user_index') }}">{{ 'menu.users'|trans({}, 'actions') }}</a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false">Dropdown</a>
+                   aria-expanded="false">{{ 'menu.settings'|trans({}, 'actions') }}</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item"
-                       href="{{ path('grr_area_index') }}">{{ 'menu.area'|trans({}, 'actions') }}</a>
-                    <a class="dropdown-item"
-                       href="{{ path('grr_setting_index') }}">{{ 'menu.settings'|trans({}, 'actions') }}</a>
-                    <a class="dropdown-item"
-                       href="{{ path('grr_utilisateurs_index') }}">{{ 'menu.users'|trans({}, 'actions') }}</a>
+                       href="{{ path('grr_user_index') }}">{{ 'menu.reservation.type'|trans({}, 'actions') }}</a>
                 </div>
             </li>
         </ul>
