--- a/templates/grr_area/_form.html.twig
+++ b/templates/grr_area/_form.html.twig
@@ -51,5 +51,5 @@
     </div>
 </div>
 
-<button class="btn btn-primary">{{ button_label|default('Save')|trans({}, 'actions') }}</button>
+<button class="btn btn-primary">{{ button_label|default('form.btn.save')|trans({}, 'actions') }}</button>
 {{ form_end(form) }}
