--- a/templates/grr_utilisateurs/edit.html.twig
+++ b/templates/grr_utilisateurs/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit GrrUtilisateurs{% endblock %}
+{% block title %}{{ grr_utilisateur.email }}{% endblock %}
 
 {% block body %}
-    <h1>Edit GrrUtilisateurs</h1>
+    <h1>{{ grr_utilisateur.email }}</h1>
 
     {{ include('grr_utilisateurs/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('grr_utilisateurs_index') }}">back to list</a>
+    <a href="{{ path('grr_user_index') }}">{{ 'back.to.list'|trans({},'actions') }}</a>
 
     {{ include('grr_utilisateurs/_delete_form.html.twig') }}
 {% endblock %}
