--- a/templates/grr_utilisateurs/show.html.twig
+++ b/templates/grr_utilisateurs/show.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}GrrUtilisateurs{% endblock %}
+{% block title %}{{ grr_utilisateur.nom }}{% endblock %}
 
 {% block body %}
-    <h1>GrrUtilisateurs</h1>
+    <h1>{{ grr_utilisateur.email }}</h1>
 
-    <a href="{{ path('grr_utilisateurs_edit', {'login': grr_utilisateur.login}) }}">edit</a>
+    {% include 'grr_utilisateurs/_actions.html.twig' %}
 
-    <table class="table">
+    <table class="table table-bordered">
         <tbody>
         <tr>
             <th>Login</th>
@@ -67,10 +67,6 @@
         </tr>
         </tbody>
     </table>
-
-    <a href="{{ path('grr_utilisateurs_index') }}">back to list</a>
-
-    <a href="{{ path('grr_utilisateurs_edit', {'login': grr_utilisateur.login}) }}">edit</a>
 
     {{ include('grr_utilisateurs/_delete_form.html.twig') }}
 {% endblock %}
