--- a/templates/grr_utilisateurs/_form.html.twig
+++ b/templates/grr_utilisateurs/_form.html.twig
@@ -18,14 +18,16 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-6">
-        {{ form_row(form.password.first) }}
+{% if form.password is defined %}
+    <div class="row">
+        <div class="col-6">
+            {{ form_row(form.password.first) }}
+        </div>
+        <div class="col-6">
+            {{ form_row(form.password.second) }}
+        </div>
     </div>
-    <div class="col-6">
-        {{ form_row(form.password.second) }}
-    </div>
-</div>
+{% endif %}
 
 <div class="row">
     <div class="col-6">
