--- a/templates/grr_utilisateurs/_actions.html.twig
+++ b/templates/grr_utilisateurs/_actions.html.twig
@@ -1,6 +1,9 @@
 <a href="{{ path('grr_user_edit', { 'id': grr_utilisateur.id }) }}" role="button"
    class="btn btn-primary"><i class="far fa-edit"></i> {{ 'form.btn.edit'|trans({}, 'actions') }}</a>
 
+<a href="{{ path('grr_user_password', { 'id': grr_utilisateur.id }) }}" role="button"
+   class="btn btn-primary"><i class="fas fa-key"></i> {{ 'form.btn.password'|trans({}, 'actions') }}</a>
+
 <a href="{{ path('grr_user_index') }}" class="btn btn-primary" role='button'><i class="fas fa-list"></i>
     {{ 'back.to.list'|trans({}, 'actions') }}
 </a>
