--- a/templates/grr_area/_list_rooms.html.twig
+++ b/templates/grr_area/_list_rooms.html.twig
@@ -1,22 +1,22 @@
+<h3 class="text-success">{{ 'area.rooms.title'|trans({},'actions') }}</h3>
 
-    <table class="table table-bordered">
-        <thead>
+<table class="table table-bordered">
+    <thead>
+    <tr>
+        <th>{{ 'room.form.nom.label'|trans }}</th>
+        <th>{{ 'room.form.orderDisplay.label'|trans }}</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for grr_room in rooms %}
         <tr>
-            <th>{{ 'room.form.nom.label'|trans }}</th>
-            <th>{{ 'room.form.orderDisplay.label'|trans }}</th>
+            <td><a href="{{ path('grr_room_show', {'id': grr_room.id}) }}">{{ grr_room.roomName }}</a></td>
+            <td>{{ grr_room.orderDisplay }}</td>
         </tr>
-        </thead>
-        <tbody>
-        {% for grr_room in rooms %}
-            <tr>
-                <td>{{ grr_room.areaId }}</td>
-                <td><a href="{{ path('grr_room_show', {'id': grr_room.id}) }}">{{ grr_room.roomName }}</a></td>
-                <td>{{ grr_room.orderDisplay }}</td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">{{ 'records.notfound'| trans({}, 'actions') }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    {% else %}
+        <tr>
+            <td colspan="2">{{ 'records.notfound'| trans({}, 'actions') }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
