--- a/templates/grr_area/show.html.twig
+++ b/templates/grr_area/show.html.twig
@@ -94,5 +94,7 @@
         </tbody>
     </table>
 
+    {% include 'grr_area/_list_rooms.html.twig' %}
+
     {{ include('grr_area/_delete_form.html.twig') }}
 {% endblock %}
