--- a/templates/_menu.html.twig
+++ b/templates/_menu.html.twig
@@ -27,7 +27,7 @@
                    aria-expanded="false">{{ 'menu.settings'|trans({}, 'actions') }}</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item"
-                       href="{{ path('grr_user_index') }}">{{ 'menu.reservation.type'|trans({}, 'actions') }}</a>
+                       href="{{ path('grr_type_area_index') }}">{{ 'menu.reservation.type'|trans({}, 'actions') }}</a>
                 </div>
             </li>
         </ul>
