--- a/templates/grr_area/new.html.twig
+++ b/templates/grr_area/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('grr_area/_form.html.twig') }}
 
-    <a href="{{ path('grr_area_index') }}">{{ 'back.to.list'|trans({}, 'actions') }}</a>
+    <a href="{{ path('grr_area_index') }}">{{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
 {% endblock %}
